@@ -9,12 +9,23 @@
   <version>1.0-SNAPSHOT</version>
 
   <properties>
-    <java.version>20</java.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <java.version>21</java.version>
     <junit-jupiter.version>5.10.0</junit-jupiter.version>
     <annotations.version>24.0.1</annotations.version>
     <slf4j.version>2.0.9</slf4j.version>
     <assertj.version>3.24.2</assertj.version>
   </properties>
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>net.bytebuddy</groupId>
+        <artifactId>byte-buddy</artifactId>
+        <version>1.14.8</version>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 
   <dependencies>
     <dependency>
@@ -30,7 +41,7 @@
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
-      <version>1.18.26</version>
+      <version>1.18.30</version>
     </dependency>
 
     <dependency>
@@ -42,7 +53,7 @@
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-junit-jupiter</artifactId>
-      <version>5.3.1</version>
+      <version>5.5.0</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -62,7 +73,6 @@
           <source>${java.version}</source>
           <target>${java.version}</target>
           <compilerArgs>
-            <arg>--add-modules=jdk.incubator.concurrent</arg>
             <arg>--enable-preview</arg>
           </compilerArgs>
         </configuration>
@@ -73,7 +83,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.1.2</version>
         <configuration>
-          <argLine>--enable-preview --add-modules=jdk.incubator.concurrent</argLine>
+          <argLine>--enable-preview</argLine>
         </configuration>
       </plugin>
     </plugins>
